<resources>
    <string name="app_name">FerreOmiltemi</string>
    <!-- Auth -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="description">Desfault description</string>
    <string name="entrar">Entrar</string>
    <string name="ir_registro"><u>¿No tienes cuenta? Registrate ahora.</u></string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registro_desc">Registrate en la app y accede a nuestros productos con las mejores promociones.</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="confirma_contraseña">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <!--Main-->
    <string name="inicio">Inicio</string>
    <string name="explora">Explora nuestros productos</string>
    <string name="categoria">Categoria</string>
    <string name="marca">Marca</string>
    <string name="ofertas">Ofertas</string>
    <string name="lo_que_buscabas">Todo lo que buscas</string>
    <string name="realiza_pedidos">PIDE EN LA APP Y PAGA EN TIENDA</string>
    <string name="contactanos">Contáctanos</string>
    <string name="nom_tienda">Ferreteria Omiltemi</string>
    <string name="horario_tienda">Horario: 08:00 - 18:00</string>
    <string name="dir_tienda">39059, Amelitos I, 39059 Chilpancingo de los Bravo, Gro.</string>
    <string name="tel_tienda">Teléfono: 7471 068433</string>
    <!--Account view-->
    <string name="datos_cuenta">Datos de cuenta</string>
    <string name="nom_apellidos">Nombre y apellidos</string>
    <string name="astericos">**********</string>
    <string name="editar">Editar</string>
    <!--Edit acccount view-->
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>
    <!--Edit account email view-->
    <string name="cambio_email">Actualizar email</string>
    <string name="nuevo_email">Nuevo email</string>
    <!--Edit account password view-->
    <string name="cambio_contraseña">Actualizar contraseña</string>
    <string name="contraseña_actual">Contraseña actual</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="confirmar_nueva_contraseña">Confirmar nueva contraseña</string>
    <!--Products activity-->
    <string name="total_productos">0 resultados</string>
    <string-array name="filtrar_productos">
        <item>Categoria</item>
        <item>Marca</item>
        <item>Descuentos</item>
    </string-array>
    <string name="agregar_carrito">Agregar al carrito</string>
    <!--Order cart-->
    <string name="cantidad">Cantidad: </string>
    <string name="remover">Remover</string>
    <string name="ordenar">Ordenar ya</string>
    <string name="carrito_vacio">Aún no has agregado productos a tu orden</string>
    <!--Order-->
    <string name="orden_compra">Orden de compra</string>
    <string name="productos">Productos</string>
    <string name="sin_ordenes">Aún no has registrado ninguna orden</string>
</resources>