<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:fadingEdge="horizontal|vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/orden_compra"
            android:textColor="@color/main_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Fecha: 01/01/1999"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_order_productstitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/productos"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_order_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/app_name"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="Estatus: Activo"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_order_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:text="@string/cancelar" />

    </LinearLayout>

</androidx.cardview.widget.CardView>