<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegistrationFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/description"
                android:src="@drawable/icono_app" />

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/bienvenido"
                android:textColor="@color/main_color"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/cabin"
                android:text="@string/registro_desc"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/nombre"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_register_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/apellidos"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/telefono"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/email"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/contraseña"
                    android:ems="10"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:boxBackgroundColor="#fff"
                app:boxBackgroundMode="outline"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/confirma_contraseña"
                    android:ems="10"
                    android:hint="@string/confirma_contraseña"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="18dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/dark_main_color"
                    android:elevation="8dp"
                    android:text="@string/cancelar"
                    android:textColor="@color/text_main_color" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/main_color"
                    android:elevation="8dp"
                    android:text="@string/registrar"
                    android:textColor="@color/text_main_color" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>