<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.client.EditAccountEmailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/cambio_email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/nuevo_email"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="@color/main_color"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_editAccountEmail_newEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="24dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/contraseña"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="@color/main_color"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_editAccountEmail_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="24dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:hint="@string/confirma_contraseña"
                app:boxBackgroundColor="@android:color/white"
                app:boxStrokeColor="@color/main_color"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_editAccountEmail_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="24dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_editAccountEmail_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>